--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_009.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_009.cshtml
@@ -59,7 +59,7 @@
         </div>
         <div class="box-body">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-6">
                     <div class="form-group">
                         <label for="IdSucursal">Sucursal</label>
                         @*@Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control" })*@
@@ -84,7 +84,7 @@
                                listBoxSettings.Properties.SelectionMode = ListEditSelectionMode.CheckColumn;
                                foreach (var item in ViewBag.lst_sucursal)
                                {
-                                   listBoxSettings.Properties.Items.Add(item.Su_Descripcion, item.IdSucursal);
+                                   listBoxSettings.Properties.Items.Add(item.Su_Descripcion, item.IdSucursal).Selected = item.Seleccionado;
                                }
                                listBoxSettings.Properties.ClientSideEvents.SelectedIndexChanged = "updateText";
                                listBoxSettings.Properties.ClientSideEvents.Init = "updateText";
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-2">
                     <div class="form-group">
                         <div class="checkbox">
                             <label for="mostrarAnulados">@Html.CheckBoxFor(q => q.mostrarAnulados) Mostrar anulados</label>
