--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Modificar.cshtml
@@ -21,9 +21,11 @@
         });
     });
 
-    function OnSelectedProductoChanged() {
+    function OnSelectedProductoChanged(s, e) {
         GridViewPartial_transferencias_det.GetEditor("IdUnidadMedida").PerformCallback();
+        SetUnidadMedida(s, e);
     }
+
     function UnidadMedidaComboBox_BeginCallback(s, e) {
         e.customArgs["in_IdProducto"] = IdProducto.GetValue();
     }
@@ -41,7 +43,7 @@
             bProcessing: true,
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                console.log(IdProducto.GetValue());
+                console.log(s.GetValue());
                 console.log(data.IdUnidadMedida);
                 GridViewPartial_transferencias_det.GetEditor('IdUnidadMedida').SetValue(data.IdUnidadMedida);
             },
