--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Modificar.cshtml
@@ -20,12 +20,34 @@
                 CargarBodegaEgreso();
             });
         });
-        function OnSelectedProductoChanged() {
+        function OnSelectedProductoChanged(s,e) {
             GridViewPartial_fabricacion_det_ing.GetEditor("IdUnidadMedida").PerformCallback();
+            SetUnidadMedida(s, e);
         }
+
         function UnidadMedidaComboBox_BeginCallback(s, e) {
             e.customArgs["in_IdProducto"] = IdProducto.GetValue();
         }
+
+        function SetUnidadMedida(s, e) {
+            var datos = {
+                IdProducto: s.GetValue()
+            }
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("SetUnidadMedida", "Producto", new { Area = "Inventario" })',
+                async: false,
+                bDeferRender: true,
+                bProcessing: true,
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    GridViewPartial_fabricacion_det_ing.GetEditor('IdUnidadMedida').SetValue(data.IdUnidadMedida);
+                },
+                error: function (error) {
+                }
+            });
+        };
         //var selectedIDs;
         //function OnBeginCallback(s, e) {
         //    e.customArgs["selectedIDs"] = selectedIDs;
