--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_ro_rol.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_ro_rol.cshtml
@@ -67,7 +67,7 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Cerrado")) == "N")
+                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "EstadoRol")) == "ABIERTO")
                 {
 
                     ViewContext.Writer.Write(
@@ -93,7 +93,7 @@
             column.Width = Unit.Pixel(85);
             column.SetDataItemTemplateContent(container =>
             {
-                if (Convert.ToString(DataBinder.Eval(container.DataItem, "Cerrado")) == "N")
+                if (Convert.ToString(DataBinder.Eval(container.DataItem, "EstadoRol")) == "ABIERTO")
                 {
 
                     Html.DevExpress().HyperLink(hyperlink =>
