--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_GridViewPartial_fabricacion_det_egr.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_GridViewPartial_fabricacion_det_egr.cshtml
@@ -71,7 +71,7 @@
                 p.TextField = "descripcion";
                 p.ValueField = "IdUnidadMedida";
                 p.ValueType = typeof(string);
-                p.DataSource = ViewBag.lst_unidad;
+                p.DataSource = ViewBag.lst_unidad_medida;
             });
         });
         settings.Columns.Add(column =>
