--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Nuevo.cshtml
@@ -48,18 +48,18 @@
                 }
             });
         };
-        //var selectedIDs;
-        //function OnBeginCallback(s, e) {
-        //    e.customArgs["selectedIDs"] = selectedIDs;
-        //    e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
-        //};
-        //function OnSelectionChanged(s, e) {
-        //    s.GetSelectedFieldValues("Secuencia", GetSelectedFieldValuesCallback);
-        //};
-        //function GetSelectedFieldValuesCallback(values) {
-        //    //Capture all selected keys
-        //    selectedIDs = values.join(',');
-        //};
+        var selectedIDs;
+        function OnBeginCallback(s, e) {
+            e.customArgs["selectedIDs"] = selectedIDs;
+            e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
+        };
+        function OnSelectionChanged(s, e) {
+            s.GetSelectedFieldValues("Secuencia", GetSelectedFieldValuesCallback);
+        };
+        function GetSelectedFieldValuesCallback(values) {
+            //Capture all selected keys
+            selectedIDs = values.join(',');
+        };
 
         function CargarBodegaIngreso() {
     $("#ing_IdBodega").empty();
@@ -134,7 +134,7 @@
     }
 
 
-    @*function MostrarModalFacturas() {
+    function MostrarModalFacturas() {
         BuscarFacturas();
         $("#ModalFacturas").modal("show");
     };
@@ -159,15 +159,16 @@
             success: function (data) {
                 if (data == false) {
                     alert("No existen resultados para los filtros aplicados");
-                }
+             
+                } $("#ModalFacturas").modal("hide");
             },
             error: function (error) {
             }
         });
         GridViewPartial_fabricacion_det_fac.PerformCallback();
-    };*@
+    };
 
-    @*function AddFacturas() {
+    function AddFacturas() {
         var datos = {
             IDs: selectedIDs,
             IdTransaccionSession: $("#IdTransaccionSession").val()
@@ -191,7 +192,7 @@
         GridViewPartial_fabricacion_det_fac.UnselectRows();
         GridViewPartial_fabricacion_det_ing.PerformCallback();
         $("#ModalFacturas").modal("hide");
-    };*@
+    };
 </script>
 @using (Html.BeginForm("Nuevo", "Fabricacion", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
@@ -261,7 +262,48 @@
             </div>
         </div>
 
-        @*<div class="col-md-6">
+        <div class="col-md-6">
+
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="">Desde*</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
+                        </div>
+                        @Html.DevExpress().DateEditFor(q => q.FechaIni, settings =>
+                                           {
+                                               settings.Name = "FechaIni";
+                                               settings.Properties.UseMaskBehavior = true;
+                                               settings.Properties.EditFormat = EditFormat.Date;
+                                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                           }).GetHtml()
+                        @Html.ValidationMessageFor(q => q.FechaIni, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="">Hasta*</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
+                        </div>
+                        @Html.DevExpress().DateEditFor(q => q.FechaFin, settings =>
+                                           {
+                                               settings.Name = "FechaFin";
+                                               settings.Properties.UseMaskBehavior = true;
+                                               settings.Properties.EditFormat = EditFormat.Date;
+                                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                           }).GetHtml()
+                        @Html.ValidationMessageFor(q => q.FechaFin, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for=""></label>
@@ -271,66 +313,26 @@
                 </div>
             </div>
 
-        </div>*@
+        </div>
 
     </div>
-  @*  <div class="modal fade" id="ModalFacturas" role="dialog">
+    <div class="modal fade" id="ModalFacturas" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Facturas</h4>
-                    <div class="row">
+                     @*<div class="row">
                         <div class="col-md-12">
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <label for="">Desde*</label>
-                                    <div class="input-group date">
-                                        <div class="input-group-addon">
-                                            <i class="fa fa-calendar"></i>
-                                        </div>
-                                        @Html.DevExpress().DateEditFor(q => q.FechaIni, settings =>
-                                           {
-                                               settings.Name = "FechaIni";
-                                               settings.Properties.UseMaskBehavior = true;
-                                               settings.Properties.EditFormat = EditFormat.Date;
-                                               settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                           }).GetHtml()
-                                        @Html.ValidationMessageFor(q => q.FechaIni, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <label for="">Hasta*</label>
-                                    <div class="input-group date">
-                                        <div class="input-group-addon">
-                                            <i class="fa fa-calendar"></i>
-                                        </div>
-                                        @Html.DevExpress().DateEditFor(q => q.FechaFin, settings =>
-                                           {
-                                               settings.Name = "FechaFin";
-                                               settings.Properties.UseMaskBehavior = true;
-                                               settings.Properties.EditFormat = EditFormat.Date;
-                                               settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                           }).GetHtml()
-                                        @Html.ValidationMessageFor(q => q.FechaFin, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                            </div>
                             <div class="col-md-2">
                                 <div class="form-group">
-                                    <label for=""> </label>
+                                  <label for=""> </label>
                                     <button type="button" class="btn btn-primary form-control" onclick="BuscarFacturas();">Buscar</button>
-                                </div>
+    </div>
                             </div>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
                 <div class="modal-body">
                     @Html.Action("GridViewPartial_fabricacion_det_fac")
@@ -341,7 +343,7 @@
                 </div>
             </div>
         </div>
-    </div>*@
+    </div>
 
     <div class="row">
         <div class="col-md-12">
@@ -355,22 +357,40 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="">Materia prima</label>
-                    @Html.Action("GridViewPartial_fabricacion_det_egr")
+
+
+
+    <div id="Tabs" role="tabpanel">
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="active">
+                <a href="#tab_producto" aria-controls="vales" role="tab" data-toggle="tab">Producto terminado</a>
+            </li>
+            <li>
+                <a href="#tab_materia" aria-controls="vales" role="tab" data-toggle="tab">Materia prima</a>
+            </li>
+        </ul>
+        <div class="tab-content" style="padding-top: 20px">
+            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_producto">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            @Html.Action("GridViewPartial_fabricacion_det_ing")
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="">Producto terminado</label>
-                        @Html.Action("GridViewPartial_fabricacion_det_ing")
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_materia">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            @Html.Action("GridViewPartial_fabricacion_det_egr")
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
