--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametroInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametroInventario/Index.cshtml
@@ -62,6 +62,13 @@
                                     @Html.ValidationMessageFor(q => q.IdMovi_inven_tipo_elaboracion_ing, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label for="IdMotivo_Inv_elaboracion_ing">Motivo para ingreso de elaboración</label>
+                                    @Html.DropDownListFor(q => q.IdMotivo_Inv_elaboracion_ing, new SelectList(ViewBag.lst_motivo_ing, "IdMotivo_Inv", "Desc_mov_inv"), new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.IdMotivo_Inv_elaboracion_ing, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="DiasTransaccionesAFuturo">Dias máximos para transacciones a futuro</label>
@@ -90,6 +97,13 @@
                                     <label for="IdMovi_inven_tipo_elaboracion_egr">Tipo movimiento para egreso de elaboración</label>
                                     @Html.DropDownListFor(q => q.IdMovi_inven_tipo_elaboracion_egr, new SelectList(ViewBag.lst_tipo_movimiento_egr, "IdMovi_inven_tipo", "tm_descripcion"), new { @class = "form-control" })
                                     @Html.ValidationMessageFor(q => q.IdMovi_inven_tipo_elaboracion_egr, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label for="IdMotivo_Inv_elaboracion_egr">Motivo para egreso de elaboración</label>
+                                    @Html.DropDownListFor(q => q.IdMotivo_Inv_elaboracion_egr, new SelectList(ViewBag.lst_motivo_egr, "IdMotivo_Inv", "Desc_mov_inv"), new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.IdMotivo_Inv_elaboracion_egr, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
