--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
@@ -31,7 +31,7 @@
             bProcessing: true,
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                GridViewPartial_producto_composicion.GetEditor('IdUnidadMedida').SetValue(data.IdUnidadMedida);
+                GridViewPartial_producto_composicion.GetEditor('IdUnidadMedida').SetValue(data.IdUnidadMedida_Consumo);
             },
             error: function (error) {
             }
