--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_GridViewPartial_fabricacion_det_ing.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_GridViewPartial_fabricacion_det_ing.cshtml
@@ -15,8 +15,8 @@
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Fabricacion", Action = "EditingUpdateIngreso", Area = "Produccion" };
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Fabricacion", Action = "EditingDeleteIngreso", Area = "Produccion" };
 
-        settings.CommandColumn.Visible = false;
-        settings.CommandColumn.ShowNewButton = true;
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowNewButtonInHeader = true;
         settings.CommandColumn.ShowEditButton = true;
         settings.CommandColumn.ShowDeleteButton = true;
 
@@ -34,7 +34,7 @@
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
-       
+       /*
         settings.Columns.Add(column =>
         {
             column.Caption = "*";
@@ -43,7 +43,7 @@
             column.EditFormSettings.Visible = DefaultBoolean.False;
             column.UnboundType = DevExpress.Data.UnboundColumnType.String;
 
-        });
+        });*/
         settings.InitNewRow = (s, e) =>
         {
             e.NewValues["Signo"] = "+";
