--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/_GridViewPartial_rubros_x_jornada.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/_GridViewPartial_rubros_x_jornada.cshtml
@@ -53,7 +53,7 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdRubroContabilizacion";
-            column.Caption = "ru_descripcion";
+            column.Caption = "Rubro";
             column.Width = Unit.Percentage(35);
             column.Visible = false;
             column.EditFormSettings.Visible = DefaultBoolean.True;
