--- a/ERP/Core.Erp.Web/Areas/General/Views/Banco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Banco/Nuevo.cshtml
@@ -9,9 +9,12 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@using (Html.BeginForm("Modificar", "Banco", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Nuevo", "Banco", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdBanco)
+    @Html.HiddenFor(q => q.IdTransaccionSession)
+    @Html.HiddenFor(q => q.IdEmpresa)
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
@@ -30,17 +33,6 @@
                     <label for="ba_descripcion">Descripción*</label>
                     @Html.TextBoxFor(q => q.ba_descripcion, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.ba_descripcion, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label for="">@Html.CheckBoxFor(q => q.TieneFormatoTransferencia) Tiene formato transferencia</label>
-                    </div>
                 </div>
             </div>
         </div>
