--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det.cshtml
@@ -4,7 +4,7 @@
     {
         settings.Name = "GridView_archivo_bancario_det";
         settings.CallbackRouteValues = new { Controller = "ArchivoBancario", Action = "GridViewPartial_archivo_bancario_det" };
-        settings.KeyFieldName = "IdEmpresa";
+        settings.KeyFieldName = "Secuencia";
         settings.Width = Unit.Percentage(100);
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ArchivoBancario", Action = "EditingUpdate", Area = "Banco" };
@@ -43,7 +43,14 @@
             column.FieldName = "IdOrdenPago";
             column.Caption = "ID";
         });
-    
+
+        settings.Columns.Add(column =>
+        {
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.Width = Unit.Percentage(40);
+            column.FieldName = "Id_Item";
+            column.Caption = "Item";
+        });
 
         settings.Columns.Add(column =>
         {
@@ -53,7 +60,14 @@
             column.Caption = "Fecha";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
         });
-      
+        settings.Columns.Add(column =>
+        {
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.Width = Unit.Percentage(20);
+            column.FieldName = "Secuencial_reg_x_proceso";
+            column.Caption = "Secuencial";
+            column.PropertiesEdit.DisplayFormatString = "{0:N2}";
+        });
         settings.Columns.Add(column =>
         {
             column.EditFormSettings.Visible = DefaultBoolean.True;
