--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Nuevo.cshtml
@@ -1,4 +1,5 @@
-﻿@model Core.Erp.Info.Banco.ba_Archivo_Transferencia_Info
+﻿
+@model Core.Erp.Info.Banco.ba_Archivo_Transferencia_Info
 @{
     ViewBag.Title = "Nueva archivo bancario";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
