--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det_op.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det_op.cshtml
@@ -33,34 +33,40 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
 
-        settings.Columns.Add("IdOrdenPago", "ID").Width = Unit.Percentage(30);
+        settings.Columns.Add("IdOrdenPago", "ID").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
             column.EditFormSettings.Visible = DefaultBoolean.False;
             column.Width = Unit.Percentage(10);
-            column.FieldName = "Id_Item";
-            column.Caption = "Item";
+            column.FieldName = "IdPersona";
+            column.Caption = "Id persona";
+        });
+        settings.Columns.Add(column =>
+        {
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.Width = Unit.Percentage(20);
+            column.FieldName = "Nom_Beneficiario";
+            column.Caption = "Nombre beneficiario";
+        });
+        settings.Columns.Add(column =>
+        {
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.Width = Unit.Percentage(20);
+            column.FieldName = "Referencia";
+            column.Caption = "Referencia";
         });
 
         settings.Columns.Add(column =>
         {
             column.EditFormSettings.Visible = DefaultBoolean.False;
             column.Width = Unit.Percentage(10);
-            column.FieldName = "Fecha_proceso";
+            column.FieldName = "Fecha_Factura";
             column.Caption = "Fecha";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
         });
         settings.Columns.Add(column =>
         {
-            column.EditFormSettings.Visible = DefaultBoolean.True;
             column.Width = Unit.Percentage(10);
-            column.FieldName = "Secuencial_reg_x_proceso";
-            column.Caption = "Secuencial";
-            column.PropertiesEdit.DisplayFormatString = "{0:N2}";
-        });
-        settings.Columns.Add(column =>
-        {
-            column.Width = Unit.Percentage(20);
             column.FieldName = "Valor";
             column.Caption = "Valor";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
