--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det_op.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det_op.cshtml
@@ -4,7 +4,7 @@
     {
         settings.Name = "GridView_archivo_bancario_det_op";
         settings.CallbackRouteValues = new { Controller = "ArchivoBancario", Action = "GridViewPartial_archivo_bancario_det_op" };
-        settings.KeyFieldName = "Secuencia";
+        settings.KeyFieldName = "IdOrdenPago";
 
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
