--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det.cshtml
@@ -4,7 +4,7 @@
     {
         settings.Name = "GridView_archivo_bancario_det";
         settings.CallbackRouteValues = new { Controller = "ArchivoBancario", Action = "GridViewPartial_archivo_bancario_det" };
-        settings.KeyFieldName = "Secuencia";
+        settings.KeyFieldName = "IdOrdenPago";
         settings.Width = Unit.Percentage(100);
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ArchivoBancario", Action = "EditingUpdate", Area = "Banco" };
