--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det.cshtml
@@ -47,8 +47,8 @@
         {
             column.EditFormSettings.Visible = DefaultBoolean.False;
             column.Width = Unit.Percentage(10);
-            column.FieldName = "IdPersona";
-            column.Caption = "Id persona";
+            column.FieldName = "IdTipoPersona";
+            column.Caption = "Tipo persona";
         });
         settings.Columns.Add(column =>
         {
